<resources>
    <string name="app_name">todoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">全部</string>
    <string name="menu_gallery">按截至日期</string>
    <string name="menu_slideshow">今日任务</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">全部</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="to">至</string>
    <string name="title">添加</string>
    <string name="getstart">添加起始时间</string>
    <string name="getend">添加截至时间</string>
    <string name="sureadd">确认添加</string>
    <string name="cancaladd">取消添加</string>
    <string name="input">点击选择日期</string>
</resources>